Fixed header height in version mobile

--- a/public/frontend/css/responsive.css
+++ b/public/frontend/css/responsive.css
@@ -2,7 +2,7 @@
 /* Min-width 1440px */
 @media screen and (max-width: 1440px) {
     .main-btn {
-        font-size: 16px !important;
+        font-size: 14px !important;
     }
     .hero-section .menu ul {
         gap: 12px;
@@ -14,7 +14,7 @@
         width: 300px !important;
     }
     .g-img-box {
-        width: 400px;
+        width: 364px;
     }
 }
 /* Min-wdith 1024px */
@@ -45,6 +45,7 @@
     .main-btn {
         padding: 10px 18px !important;
         width: 100% !important;
+        font-size: 13px !important;
     }
     .g-img-box {
         width: 300px;
@@ -124,6 +125,9 @@
 }
 /* Max-wdith 768px */
 @media screen and (max-width: 768px) {
+    .second-header {
+        height: 60vh;
+    }
     header {
         height: 80vh;
     }
@@ -328,6 +332,10 @@
         text-align: center;
         font-size: 30px;
         margin-bottom: 20px;
+    }
+
+    .hero-banner {
+        padding: 0;
     }
     .acheter-processing .processing-heading {
         text-align: center;
